kubernetes_templates/deployment/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-service
spec:
  type: ClusterIP
  selector:
    app: devops-service
  ports:
  - name: http
    protocol: TCP
    targetPort: 8080
    port: 8080
