kubernetes_templates/deployment/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route 
metadata:
  name: devops-service
spec:
  host: devops-service.apps.cluster-f5f7.dynamic.opentlc.com
  wildcardPolicy: None
  to:
    kind: Service
    name: devops-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
